--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 
-logo: http://huisblog.cn/DrumBottles/images/drum_logo.jpeg
+logo: http://huisblog.cn/DrumBottles/images/drum_logo.png
